@@ -1,3 +1,8 @@
+2005-11-03  Jonathan Pryor <jonpryor@vt.edu>
+
+	* FileTypes.cs, UnixFileSystemInfo.cs: s/FIFO/Fifo/ to follow .NET
+	  naming conventions (as reported by FxCop).
+
 2005-11-01  Jonathan Pryor <jonpryor@vt.edu>
 
 	* UnixDirectoryInfo.cs, UnixDriveInfo.cs, UnixEnvironment.cs, 
